fixed some alignment

--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body {
 .header {
     padding-bottom: 52px;
     padding-top: 12px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     width: 100%;
     height: 32px;
     font-size: 20px;
@@ -19,15 +19,15 @@ body {
 /* Left column */
 .leftcolumn {
     float: left;
-    width: 65%;
-    padding: 1%;
+    width: 69%;
+    /* padding: 1%; */
 }
 
 /* Right column */
 .rightcolumn {
     float: right;
     width: 30%;
-    padding: 1%;
+    /* padding: 1%; */
 }
 
 .rightcolumn img {
